added infinite list example using BLoC

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /bloc_tutorial
 /bloc_cubit_weather_forecast
 
-/bloc_counter/.VSCodeCounter
-/bloc_counter/android
-/bloc_counter/ios
-/bloc_counter/web
+/*/.VSCodeCounter
+/*/android
+/*/ios
+/*/web
+
