--- a/bloc_weather/packages/weather_repository/pubspec.yaml
+++ b/bloc_weather/packages/weather_repository/pubspec.yaml
@@ -5,22 +5,18 @@ publish_to: none
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
-  # flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  equatable: 2.0.3
-  json_annotation: ^4.0.0
-  meta_weather_api: 
+  equatable: ^2.0.3
+  json_annotation: ^4.4.0
+  meta_weather_api:
     path: ../meta_weather_api
 
 dev_dependencies:
-  # flutter_test:
-  #   sdk: flutter
-  # flutter_lints: 1.0.0
   coverage: ^1.0.3
-  build_runner: ^1.10.0
-  json_serializable: ^4.0.0
+  build_runner: ^2.0.0
+  json_serializable: ^6.0.0
   mocktail: ^0.2.0
   test: ^1.16.4
