--- a/bloc_weather/pubspec.yaml
+++ b/bloc_weather/pubspec.yaml
@@ -1,17 +1,33 @@
 name: bloc_weather
-description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: A Flutter project to show weather
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
+  flutter_services_binding: ^0.1.0
+  google_fonts: ^2.1.0
+  hydrated_bloc: ^8.0.0
+  json_annotation: ^4.4.0
+  path_provider: ^2.0.8
+  weather_repository:
+    path: packages/weather_repository
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  bloc_test: ^9.0.2
+  build_runner: ^2.0.0
+  json_serializable: ^6.0.0
+  mocktail: ^0.2.0
+
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
