--- a/bloc_todos/packages/todos_repository/pubspec.yaml
+++ b/bloc_todos/packages/todos_repository/pubspec.yaml
@@ -4,7 +4,11 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
+
+dependencies:
+  todos_api:
+    path: ../todos_api
 
 dev_dependencies:
   test: ^1.19.2
